Main page (HTML + CSS)

--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <ul class="images">
+    <li class="burger"><img src="img/burger.png" alt="picture of burger"></li>
+    <li class="pizza"><img src="img/pizza.png" alt="picture of pizza"></li>
+    <li class="pancakes"><img src="img/pancakes.png" alt="picture of burger"></li>
+    <li class="spaghetti"><img src="img/spaghetti.png" alt="picture of burger"></li>
+  </ul>
   <h1>Recipe Finder</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, consequatur. Voluptatibus at incidunt provident quasi architecto accusantium expedita, sed voluptate magni debitis mollitia officiis! Harum facilis dolore veritatis placeat sint.</p>
+  <p>Use this website to find recipes based on your desired ingredients</p>
+  <form>
+    <input type="text" id="ingredient-1" name="ingredient-1" placeholder="ingredient 1">
+    <br><br>
+    <input type="text" id="ingredient-2" name="ingredient-2" placeholder="ingredient 2">
+    <br><br>
+    <input type="text" id="ingredient-3" name="ingredient-3" placeholder="ingredient 3">
+    <br><br>
+    <input type="text" id="ingredient-4" name="ingredient-4" placeholder="ingredient 4">
+    <br><br>
+
+    <input type="submit" value="Find Recipes">
+  </form>
 </body>
 </html>
