Polished look of cards in results page

--- a/index.html
+++ b/index.html
@@ -36,19 +36,16 @@
 
   <!-- Code for list of items created when user submits search
   <div class="container">
-    <div class="item item-1">
-      <p>food title</p>
-      <img src="www.somewebsite.com" alt="food image">
-    </div>
-    <div class="item item-2">2</div>
-    <div class="item item-3">3</div>
-    <div class="item item-4">4</div>
-    <div class="item item-5">5</div>
-    <div class="item item-6">6</div>
-    <div class="item item-7">7</div>
-    <div class="item item-8">8</div>
-    <div class="item item-9">9</div>
-    <div class="item item-10">10</div>
+    <a class="item item-1">
+      <p class="title title-1">food title</p>
+      <img class="img img-1" src="www.somewebsite.com" alt="food image">
+    </a>
+    <a class="item item-2">2</a>
+    <a class="item item-3">3</a>
+    <a class="item item-4">4</a>
+    <a class="item item-5">5</a>
+    <a class="item item-6">6</a>
+    ...
   </div>
   -->
 </body>
