--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 
   <!-- Code for list of items created when user submits search
   <div class="container">
-    <a class="item item-1">
+    <div class="item item-1" id="RECIPE_ID">
       <p class="title title-1">food title</p>
       <img class="img img-1" src="www.somewebsite.com" alt="food image">
-    </a>
-    <a class="item item-2">2</a>
-    <a class="item item-3">3</a>
-    <a class="item item-4">4</a>
-    <a class="item item-5">5</a>
-    <a class="item item-6">6</a>
+    </div>
+    <div class="item item-2">2</div>
+    <div class="item item-3">3</div>
+    <div class="item item-4">4</div>
+    <div class="item item-5">5</div>
+    <div class="item item-6">6</div>
     ...
   </div>
   -->
