Added recipe prep page with formatting

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li class="pancakes"><img src="img/pancakes.png" alt="picture of burger"></li>
     <li class="spaghetti"><img src="img/spaghetti.png" alt="picture of burger"></li>
   </ul>
-  <h1>Recipe Finder</h1>
+  <h1 id="website-title">Recipe Finder</h1>
   <p id="description">Use this website to find recipes based on your desired ingredients</p>
   <!--Forum hidden when user submits search to show results-->
   <form id="ingredients">
@@ -46,6 +46,16 @@
     <div class="item item-5">5</div>
     <div class="item item-6">6</div>
     ...
+  </div>
+  -->
+
+  <!-- Code for recipe displayed when user clicks a meal
+  <div class="recipe">
+    <p id="recipe-title">
+    <img id="recipe-img" src="https://img.spoonacular.com/recipes/123456.jpg">
+    <div class="recipe-instruction">Recipe instruction 1...</div>
+    <div class="recipe-instruction">Recipe instruction 2...</div>
+    ... 
   </div>
   -->
 </body>
