Made recipe instructions page responsive

--- a/index.html
+++ b/index.html
@@ -51,11 +51,18 @@
 
   <!-- Code for recipe displayed when user clicks a meal
   <div class="recipe">
-    <p id="recipe-title">
+    <p id="recipe-title">Bacon Burger</p>
     <img id="recipe-img" src="https://img.spoonacular.com/recipes/123456.jpg">
-    <div class="recipe-instruction">Recipe instruction 1...</div>
-    <div class="recipe-instruction">Recipe instruction 2...</div>
-    ... 
+    <p>Ingredients</p>
+    <ul id="ingred-container">
+      <li class="ingred-item">Tomatoes</li>
+      ...
+    </ul>
+    <p>Instructions</p>
+    <ul id="recipe-container">
+      <li class="recipe-instruction">Mix xy with xx</li>
+      ...
+    </ul>
   </div>
   -->
 </body>
