--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <li class="spaghetti"><img src="img/spaghetti.png" alt="picture of burger"></li>
   </ul>
   <h1 id="website-title">Recipe Finder</h1>
+  <!-- Link to return to results page, shown on instructions page
+  <div id="results-link">Back to results</div> 
+  -->
+  <!-- Link to return home displayed on recipe results and instructions pages
+  <a href="index.html" id="home-link">Back to search</a>
+  -->
   <p id="description">Use this website to find recipes based on your desired ingredients</p>
   <!--Forum hidden when user submits search to show results-->
   <form id="ingredients">
