--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
   <p id="description">Use this website to find recipes based on your desired ingredients</p>
   <!--Forum hidden when user submits search to show results-->
   <form id="ingredients">
-    <input type="text" id="ingredient-1" name="ingredient-1" placeholder="ingredient 1">
+    <input type="text" class="ingredient" id="ingredient-1" placeholder="ingredient 1">
     <br><br>
-    <input type="text" id="ingredient-2" name="ingredient-2" placeholder="ingredient 2">
+    <input type="text" class="ingredient" id="ingredient-2" placeholder="ingredient 2">
     <br><br>
-    <input type="text" id="ingredient-3" name="ingredient-3" placeholder="ingredient 3">
+    <input type="text" class="ingredient" id="ingredient-3" placeholder="ingredient 3">
     <br><br>
-    <input type="text" id="ingredient-4" name="ingredient-4" placeholder="ingredient 4">
+    <input type="text" class="ingredient" id="ingredient-4" placeholder="ingredient 4">
     <br><br>
-
+    <input type="button" id="add-ingredient" value="+">
+    <br><br>
     <input type="submit" value="Find Recipes">
   </form>
 
