Added ability to search by recipe name

--- a/index.html
+++ b/index.html
@@ -28,17 +28,20 @@
   <p id="description">Use this website to find recipes based on your desired ingredients</p>
   <!--Forum hidden when user submits search to show results-->
   <form id="ingredients">
+    <input type="button" value="Search by ingredients" id="search-by-ingredients">
+    <input type="button" value="Search by recipe name" id="search-by-recipe-name">
+    <br class="ingred-break"><br class="ingred-break">
     <input type="text" class="ingredient" id="ingredient-1" placeholder="ingredient 1">
-    <br><br>
+    <br class="ingred-break"><br class="ingred-break">
     <input type="text" class="ingredient" id="ingredient-2" placeholder="ingredient 2">
-    <br><br>
+    <br class="ingred-break"><br class="ingred-break">
     <input type="text" class="ingredient" id="ingredient-3" placeholder="ingredient 3">
-    <br><br>
+    <br class="ingred-break"><br class="ingred-break">
     <input type="text" class="ingredient" id="ingredient-4" placeholder="ingredient 4">
-    <br><br>
+    <br class="ingred-break"><br class="ingred-break">
     <input type="button" id="add-ingredient" value="+">
-    <br><br>
-    <input type="submit" value="Find Recipes">
+    <br class="ingred-break"><br class="ingred-break">
+    <input type="submit" value="Find Recipes" id="submit">
   </form>
 
   <!-- Code for list of items created when user submits search
