--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <ul class="images">
     <li class="burger"><img src="img/burger.png" alt="picture of burger"></li>
     <li class="pizza"><img src="img/pizza.png" alt="picture of pizza"></li>
-    <li class="pancakes"><img src="img/pancakes.png" alt="picture of burger"></li>
-    <li class="spaghetti"><img src="img/spaghetti.png" alt="picture of burger"></li>
+    <li class="pancakes"><img src="img/pancakes.png" alt="picture of pancakes"></li>
+    <li class="spaghetti"><img src="img/spaghetti.png" alt="picture of spaghetti"></li>
   </ul>
   <h1 id="website-title">Recipe Finder</h1>
   <!-- Link to return to results page, shown on instructions page
